[FIX] - Navbar z-index | favicon

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -8,6 +8,7 @@
     padding-inline: 2.5rem;
     font-family: 'Roboto', sans-serif;
     font-weight: 550;
+    z-index: 100;
 }
 
 .right_nav {
